<resources>
    <string name="app_name">AD340K by Enshaedn</string>
    <string name="main_content">Alex Clontz\'s AD340 App - Homework 8</string>
    <string name="ein_pi_desc">Wife and corgi</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_click">Click Me!</string>
    <string name="display_info">My wife and I live in Seattle with our corgi, Einstein. I live a pretty quiet life consisting mostly
    of work and school. The AD program at NSC has been very enjoyable so far and I look forward to changing careers.</string>
    <string name="placeholder">Temp Info</string>
    <string name="gridB1">1</string>
    <string name="gridB2">2</string>
    <string name="gridB3">3</string>
    <string name="gridB4">4</string>
    <string name="Title">Title Placeholder</string>
    <string name="Director">Directed By:&#160;</string>
    <string name="zDescription">Movie Description Placeholder</string>
    <string name="Year">Released:&#160;</string>
    <string name="aboutApp">This app is being created for AD340 at NSC. Currently the app does not have any particular
    direction, but may be utilized for a text-only game.</string>
    <string name="actAbout">About</string>
    <string name="actList">Movie List</string>
    <string name="actDetail">Movie Details</string>
    <string name="actPhrase">Passed Phrase</string>
    <string name="navCamList">Traffic Cameras</string>
    <string name="camsMap">Cameras Map</string>
    <string name="title_settings">Settings</string>
    <string name="search">Search</string>
    <string name="sdot">SDOT</string>
    <string name="wsdot">WSDOT</string>
    <string name="both">Both</string>
    <string name="title_activity_maps">Map</string>
</resources>
