<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item android:id="@+id/phrase"
        android:title="@string/actPhrase"
        android:icon="@drawable/ic_chat_bubble_outline_black_24dp"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/zlist"
        android:title="@string/actList"
        android:icon="@drawable/ic_swap_vert_black_24dp"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/zDetail"
        android:title="@string/actDetail"
        android:icon="@drawable/ic_call_made_black_24dp"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/about"
        android:title="@string/actAbout"
        android:icon="@drawable/ic_call_black_24dp"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_settings"
        android:title="@string/title_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        app:showAsAction="never" />
</menu>