<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/actAbout" />
        <item
            android:id="@+id/nav_movie_list"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/actList" />
        <item
            android:id="@+id/nav_cam_list"
            android:icon="@drawable/baseline_linked_camera_black_24"
            android:title="@string/navCamList" />
        <item
            android:id="@+id/nav_cam_map"
            android:icon="@drawable/baseline_map_black_24"
            android:title="@string/camsMap" />
    </group>
</menu>